--- a/cfg/yolov3.cfg
+++ b/cfg/yolov3.cfg
@@ -5,8 +5,10 @@ subdivisions=1
 # Training
 # batch=64
 # subdivisions=16
-width=416
-height=416
+#width=416
+#height=416
+width=1920
+height=1088
 channels=3
 momentum=0.9
 decay=0.0005
